# bolero

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  COPYING  NEWS.md  README.md  README.rst  api_cpp.html  api_py.html  behavior_learning.html  bootstrap_bolero.sh  contributing.html  genindex.html  imitation_learning.html  index.html  installation.html  manifest.xml  mars_environment.html  objects.inv  packageList.txt  py-modindex.html  quickstart-controller.html  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py
bolero/wrapper/: CMakeLists.txt  __init__.py  _wrapper.pxd  _wrapper.pyx  build_info.py.in  manifest.xml  setup.py
bolero/wrapper/test/: learning_config.yml  optimizer_config.yml  test_library_config.txt  test_library_config.txt.in  test_python_wrapper.py
doc/source/_static/example_environment/: CMakeLists.txt  example_environment.pc.in
include/: CMakeLists.txt  bolero.pc.in  manifest.xml
include/src/: Behavior.h  BehaviorSearch.h  ContextualEnvironment.h  Environment.h  LoadableBehavior.h  Optimizer.h  ParameterizedEnvironment.h
src/bl_loader/: CMakeLists.txt  manifest.xml
src/bl_loader/c++/: CMakeLists.txt  bl_loader.pc.in
src/bl_loader/c++/src/: BLLoader.cpp  BLLoader.h  Helper.cpp  Helper.h  PyBehavior.cpp  PyBehavior.h  PyBehaviorSearch.cpp  PyBehaviorSearch.h  PyEnvironment.cpp  PyEnvironment.h  PyLoadable.h  PyLoadableBehavior.cpp  PyLoadableBehavior.h  PyOptimizer.cpp  PyOptimizer.h  PythonInterpreter.cpp  PythonInterpreter.hpp
src/bl_loader/src/: CMakeLists.txt  bl_loader.pc.in
src/bl_loader/src/src/: BLLoader.cpp  PyBehavior.cpp  PyBehavior.h  PyBehaviorSearch.cpp  PyBehaviorSearch.h  PyEnvironment.cpp  PyEnvironment.h  PyLoadableBehavior.cpp  PyLoadableBehavior.h  PyOptimizer.cpp  PyOptimizer.h  PythonInterpreter.cpp  PythonInterpreter.hpp
src/bl_loader/test/: CMakeLists.txt
src/bl_loader/test/config/: config.yaml.in  functions.py  init.yaml.in  learning_config.yml.in
src/bl_loader/test/python/: functions.py  test_behavior.py
src/bl_loader/test/src/: main.cpp
src/controller/: CMakeLists.txt  build.sh  manifest.xml
src/controller/src/: Controller.cpp  Controller.h  main.cpp
src/environment/cec13_test_functions/: CMakeLists.txt  cec13_test_functions.pc.in  manifest.xml
src/environment/cec13_test_functions/src/: CEC13TestFunctions.cpp  CEC13TestFunctions.h  test_func.cpp
src/environment/function_approximation/: CMakeLists.txt  manifest.xml
src/environment/function_approximation/src/: FunctionApproximation.cpp  FunctionApproximation.h
src/environment/mars_environment/: CMakeLists.txt  manifest.xml  mars_environment.pc.in
src/environment/mars_environment/src/: MARSEnvPlugin.cpp  MARSEnvPlugin.h  MARSEnvironment.cpp  MARSEnvironment.h  MARSEnvironmentHelper.cpp  MARSEnvironmentHelper.h  MARSReceiver.cpp  MARSReceiver.h  MARSThread.cpp  MARSThread.h
src/environment/mountain_car/: CMakeLists.txt  manifest.xml
src/environment/mountain_car/src/: MountainCar.cpp  MountainCar.h
src/optimizer/pso_optimizer/: CMakeLists.txt  evalPSOOutput.py  manifest.xml
src/optimizer/pso_optimizer/src/: PSOOptimizer.cpp  PSOOptimizer.h
src/representation/dmp/: .gitignore  CMakeLists.txt  build_info.py.in  cbindings.pxd  dmp_cpp.pc.in  manifest.xml  quaternion_dmp_cpp.pc.in  rigid_body_dmp_cpp.pc.in  setup.py
src/representation/dmp/cmake/: FindEigen3.cmake  FindYamlCpp.cmake
src/representation/dmp/implementation/: .gitignore  CMakeLists.txt
src/representation/dmp/implementation/dmp/: CMakeLists.txt  _declarations.pxd  dmp.cpp  dmp.pyx  generate.py  setup.py  setup.py.in
src/representation/dmp/implementation/src/: CMakeLists.txt  Dmp.cpp  Dmp.h
src/representation/dmp/python/: build_info.py.in  dmp_cpp.pyx  rigid_body_dmp_cpp.pyx  setup.py
src/representation/dmp/python/dmp/: __init__.py  build_info.py.in  cbindings.pxd  dmp_cpp.pyx  imitation.py  rigid_body_dmp_cpp.pyx  setup.py
src/representation/dmp/python_wrappers/dmp/: cbindings.pxd
src/representation/dmp/python_wrappers/rigid_body_dmp/: cbindings.pxd  test_rigid_body_dmp_cpp.py
src/representation/dmp/src/: CMakeLists.txt  CanonicalSystem.cpp  CanonicalSystem.h  DMPConfig.cpp  DMPConfig.h  DMPModel.cpp  DMPModel.h  DMPWrapper.h  Dmp.cpp  Dmp.h  DmpBehavior.cpp  DmpBehavior.h  EigenHelpers.h  FifthOrderPolynomial.cpp  FifthOrderPolynomial.h  ForcingTerm.cpp  ForcingTerm.h  QuaternionDmp.cpp  QuaternionDmp.h  QuaternionDmpConfig.cpp  QuaternionDmpConfig.h  QuaternionDmpModel.h  QuaternionTransformationSystem.cpp  QuaternionTransformationSystem.h  RbfFunctionApproximator.cpp  RbfFunctionApproximator.h  RigidBodyDmp.cpp  RigidBodyDmp.h  RigidBodyDmpConfig.cpp  RigidBodyDmpConfig.h  TransformationSystem.cpp  TransformationSystem.h  quaternion_dmp_cpp.pc.in
src/representation/dmp/test/: CMakeLists.txt  import_export_test.yml  import_export_test_config.yml  model.yaml  test_canonical_system.cpp  test_dmp.cpp  test_dmp_behavior.cpp  test_dmp_config.cpp  test_dmp_model.cpp  test_dmp_wrapper.cpp  test_fifth_order_polynomial.cpp  test_forcing_term.cpp  test_function_approximator.cpp  test_helpers.h  test_main.cpp  test_quaternion_dmp.cpp  test_quaternion_dmp_config.cpp  test_quaternion_transformation_system.cpp  test_rigid_body_dmp.cpp  test_rigid_body_dmp_config.cpp  test_transformation_system.cpp
src/representation/dmp/test_dmp_behavior/: CMakeLists.txt
src/representation/dmp/test_dmp_behavior/configuration/: config.yaml  load_libraries.in
src/representation/dmp/test_dmp_behavior/src/: main.cpp
src/representation/dmp/test_dmp_quaternion_behavior/: CMakeLists.txt
src/representation/dmp/test_dmp_quaternion_behavior/configuration/: config.yaml  load_libraries.in  model.yaml
src/representation/dmp/test_dmp_quaternion_behavior/src/: main.cpp
src/representation/dmp/test_dmp_rigid_body_behavior/: CMakeLists.txt
src/representation/dmp/test_dmp_rigid_body_behavior/configuration/: config.yaml  (+2 more)
src/representation/promp/: .gitignore  CMakeLists.txt  manifest.xml  promp_cpp.pc.in
src/representation/promp/implementation/: CMakeLists.txt
(+355 files in other folders)
